--- a/eureka-client/src/main/resources/application.properties
+++ b/eureka-client/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.port=8762
-spring.application.name=eureka-client
+spring.application.name=eureka-client1
 eureka.client.service-url.defaultZone: http://localhost:8761/eureka/
