--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 server.port=8761
 eureka.instance.hostname=localhost
+eureka.server.enableSelfPreservation=true
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.client.service-url.defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
 spring.application.name=eurka-server
+
 
