--- a/eureka-client/src/main/resources/application.properties
+++ b/eureka-client/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 server.port=8762
 spring.application.name=eureka-client
 eureka.client.service-url.defaultZone: http://localhost:8761/eureka/
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/superdb?useUnicode=true&characterEncoding=utf8
+spring.datasource.username=root
+spring.datasource.password=1234567
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
