--- a/eureka-client/pom.xml
+++ b/eureka-client/pom.xml
@@ -13,7 +13,7 @@
         <groupId>com.springcloud</groupId>
         <artifactId>com.springcloud</artifactId>
         <version>1.0-SNAPSHOT</version>
-
+        <relativePath></relativePath>
     </parent>
 
     <dependencies>
@@ -26,11 +26,7 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <!-- MySQL 连接驱动依赖 -->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.39</version>
-        </dependency>
+
         <!-- Spring Boot Mybatis 依赖 -->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
