--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.springcloud</groupId>
     <artifactId>com.springcloud</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>com-springcloud</name>
+    <name>com.springcloud</name>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.39</version>
+            <version>8.0.16</version>
         </dependency>
 
         <!-- Spring Boot Mybatis 依赖 -->
