--- a/eureka-client1/src/main/resources/application.properties
+++ b/eureka-client1/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 server.port=8763
 spring.application.name=eureka-client
 eureka.client.service-url.defaultZone: http://localhost:8761/eureka/
+spring.datasource.url=jdbc:mysql://0.0.0.0:3306/superdb?useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=1234567
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
