--- a/ribbon-server/pom.xml
+++ b/ribbon-server/pom.xml
@@ -14,6 +14,9 @@
         <version>1.0-SNAPSHOT</version>
 
     </parent>
+    <modules>
+        <module>../eureka-client</module>
+    </modules>
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -26,6 +29,12 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.eureka.client</groupId>
+            <artifactId>eureka-client</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
