--- a/eureka-client/pom.xml
+++ b/eureka-client/pom.xml
@@ -7,23 +7,29 @@
     <artifactId>eureka-client</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>eureka-client</name>
+    <packaging>jar</packaging>
+
     <description>Demo project for Spring Boot</description>
 
     <parent>
         <groupId>com.springcloud</groupId>
         <artifactId>com.springcloud</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath></relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>2.0.3.RELEASE</version>
+
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.0.5.RELEASE</version>
+
         </dependency>
         <!-- MySQL 连接驱动依赖 -->
 
@@ -41,6 +47,16 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.eureka.client.eurekaclient.EurekaClientApplication</mainClass>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
