--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -6,23 +6,49 @@
     <groupId>com.eureka.server</groupId>
     <artifactId>eureka-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
+
     <description>Demo project for Spring Boot</description>
 
     <parent>
         <groupId>com.springcloud</groupId>
         <artifactId>com.springcloud</artifactId>
         <version>1.0-SNAPSHOT</version>
-
+        <relativePath>../pom.xml</relativePath>
     </parent>
         <dependencies>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+                <version>2.0.3.RELEASE</version>
             </dependency>
         </dependencies>
 
 
+<build>
+    <plugins>
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+        </plugin>
 
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <configuration>
+                <mainClass>com.eureka.server.demo.DemoApplication</mainClass>
+            </configuration>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>repackage</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+
+    </plugins>
+</build>
 
 
 
