--- a/eureka-client/src/main/resources/application.properties
+++ b/eureka-client/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.username=root
 spring.datasource.password=1234567
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+spring.cloud.compatibility-verifier.enabled=false
+spring.main.allow-bean-definition-overriding=true
