--- a/eureka-redis/src/main/resources/application.properties
+++ b/eureka-redis/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.password=1234567
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
+spring.cloud.compatibility-verifier.enabled=false
