--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -5,5 +5,6 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.client.service-url.defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
 spring.application.name=eurka-server
+spring.cloud.compatibility-verifier.enabled=false
 
 
