--- a/ribbon-server/src/main/resources/application.properties
+++ b/ribbon-server/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8764
 spring.application.name=server-ribbon
 eureka.client.service-url.defaultZone: http://localhost:8761/eureka/
+spring.cloud.compatibility-verifier.enabled=false
