--- a/eureka-client/pom.xml
+++ b/eureka-client/pom.xml
@@ -38,6 +38,12 @@
             <version>1.2.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.1.10</version>
+        </dependency>
+
     </dependencies>
 
     <build>
