add printf druid

--- a/eureka-client/src/main/resources/application.properties
+++ b/eureka-client/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.username=root
 spring.datasource.password=1234567
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.druid.max-active=100000
+spring.datasource.druid.initial-size=100000
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 spring.cloud.compatibility-verifier.enabled=false
 spring.main.allow-bean-definition-overriding=true
