--- a/eureka-client/src/main/resources/application.properties
+++ b/eureka-client/src/main/resources/application.properties
@@ -5,9 +5,16 @@ spring.datasource.url=jdbc:mysql://0.0.0.0:3306/superdb?useUnicode=true&characte
 spring.datasource.username=root
 spring.datasource.password=1234567
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.maxActive=12
+spring.datasource.druid.min-idle=12
+spring.datasource.minidle=12
+spring.datasource.initialSize=12
+spring.datasource.tomcat.max-active=12
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.druid.max-active=100000
-spring.datasource.druid.initial-size=100000
+spring.datasource.druid.max-active=12
+spring.datasource.druid.initial-size=12
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 spring.cloud.compatibility-verifier.enabled=false
 spring.main.allow-bean-definition-overriding=true
+mybatis.configuration.cache-enabled=true
+spring.datasource.druid.stat-view-servlet.enabled= true
