--- a/eureka-client/pom.xml
+++ b/eureka-client/pom.xml
@@ -43,8 +43,13 @@
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.1.16</version>
         </dependency>
-
-
+        <!--
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.16</version>
+        </dependency>
+        -->
 
     </dependencies>
 
