--- a/eureka-client/src/main/resources/application.properties
+++ b/eureka-client/src/main/resources/application.properties
@@ -1,20 +1,82 @@
 server.port=8762
 spring.application.name=eureka-client
 eureka.client.service-url.defaultZone: http://localhost:8761/eureka/
+
+
 spring.datasource.url=jdbc:mysql://0.0.0.0:3306/superdb?useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=1234567
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.maxActive=12
-spring.datasource.druid.min-idle=12
 spring.datasource.minidle=12
 spring.datasource.initialSize=12
-spring.datasource.tomcat.max-active=12
+spring.datasource.initialization-mode=always
+spring.datasource.poolPreparedStatements=true
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.druid.max-active=12
-spring.datasource.druid.initial-size=12
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 spring.cloud.compatibility-verifier.enabled=false
 spring.main.allow-bean-definition-overriding=true
 mybatis.configuration.cache-enabled=true
-spring.datasource.druid.stat-view-servlet.enabled= true
+
+
+spring.datasource.druid.initial-size=5
+spring.datasource.druid.min-idle=5
+spring.datasource.druid.async-init=true
+spring.datasource.druid.async-close-connection-enable=true
+spring.datasource.druid.max-active=20
+spring.datasource.druid.max-wait=60000
+spring.datasource.druid.time-between-eviction-runs-millis=60000
+spring.datasource.druid.min-evictable-idle-time-millis=30000
+spring.datasource.druid.validation-query=SELECT 1 FROM DUAL
+spring.datasource.druid.test-while-idle=true
+spring.datasource.druid.test-on-borrow=false
+spring.datasource.druid.test-on-return=false
+spring.datasource.druid.pool-prepared-statements=true
+spring.datasource.druid.max-pool-prepared-statement-per-connection-size=20
+spring.datasource.druid.filters=stat,wall,log4j2
+spring.datasource.druid.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+
+spring.datasource.druid.web-stat-filter.enabled=true
+spring.datasource.druid.web-stat-filter.url-pattern=/*
+spring.datasource.druid.web-stat-filter.exclusions=*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*
+spring.datasource.druid.web-stat-filter.session-stat-enable=true
+spring.datasource.druid.web-stat-filter.profile-enable=true
+
+
+spring.datasource.druid.stat-view-servlet.enabled=true
+spring.datasource.druid.stat-view-servlet.url-pattern=/druid/*
+spring.datasource.druid.stat-view-servlet.login-username=admin
+spring.datasource.druid.stat-view-servlet.login-password=admin
+spring.datasource.druid.stat-view-servlet.reset-enable=false
+spring.datasource.druid.stat-view-servlet.allow=127.0.0.1
+
+spring.datasource.druid.filter.wall.enabled=true
+spring.datasource.druid.filter.wall.db-type=mysql
+spring.datasource.druid.filter.wall.config.alter-table-allow=false
+spring.datasource.druid.filter.wall.config.truncate-allow=false
+spring.datasource.druid.filter.wall.config.drop-table-allow=false
+
+spring.datasource.druid.filter.wall.config.none-base-statement-allow=false
+spring.datasource.druid.filter.wall.config.update-where-none-check=true
+spring.datasource.druid.filter.wall.config.select-into-outfile-allow=false
+spring.datasource.druid.filter.wall.config.metadata-allow=true
+spring.datasource.druid.filter.wall.log-violation=true
+spring.datasource.druid.filter.wall.throw-exception=true
+
+spring.datasource.druid.filter.stat.log-slow-sql= true
+spring.datasource.druid.filter.stat.slow-sql-millis=1000
+spring.datasource.druid.filter.stat.merge-sql=true
+spring.datasource.druid.filter.stat.db-type=mysql
+spring.datasource.druid.filter.stat.enabled=true
+
+
+#spring.datasource.druid.filter.log4j2.enabled=true
+#spring.datasource.druid.filter.log4j2.connection-log-enabled=true
+#spring.datasource.druid.filter.log4j2.connection-close-after-log-enabled=true
+#spring.datasource.druid.filter.log4j2.connection-commit-after-log-enabled=true
+#spring.datasource.druid.filter.log4j2.connection-connect-after-log-enabled=true
+#spring.datasource.druid.filter.log4j2.connection-connect-before-log-enabled=true
+#spring.datasource.druid.filter.log4j2.connection-log-error-enabled=true
+#spring.datasource.druid.filter.log4j2.data-source-log-enabled=true
+#spring.datasource.druid.filter.log4j2.result-set-log-enabled=true
+#spring.datasource.druid.filter.log4j2.statement-log-enabled=true
