--- a/eureka-client/src/main/resources/application.properties
+++ b/eureka-client/src/main/resources/application.properties
@@ -19,11 +19,11 @@ spring.main.allow-bean-definition-overriding=true
 mybatis.configuration.cache-enabled=true
 
 
-spring.datasource.druid.initial-size=5
-spring.datasource.druid.min-idle=5
+spring.datasource.druid.initial-size=10000
+spring.datasource.druid.min-idle=10000
 spring.datasource.druid.async-init=true
 spring.datasource.druid.async-close-connection-enable=true
-spring.datasource.druid.max-active=20
+spring.datasource.druid.max-active=20000
 spring.datasource.druid.max-wait=60000
 spring.datasource.druid.time-between-eviction-runs-millis=60000
 spring.datasource.druid.min-evictable-idle-time-millis=30000
@@ -80,3 +80,4 @@ spring.datasource.druid.filter.stat.enabled=true
 #spring.datasource.druid.filter.log4j2.data-source-log-enabled=true
 #spring.datasource.druid.filter.log4j2.result-set-log-enabled=true
 #spring.datasource.druid.filter.log4j2.statement-log-enabled=true
+server.tomcat.max-threads=12
