--- a/eureke-druid/pom.xml
+++ b/eureke-druid/pom.xml
@@ -43,7 +43,11 @@
             <version>1.1.16</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.activiti</groupId>
+            <artifactId>activiti-spring-boot-starter</artifactId>
+            <version>7.1.0.M1</version>
+        </dependency>
 
 
 
