--- a/eureke-druid/pom.xml
+++ b/eureke-druid/pom.xml
@@ -43,14 +43,11 @@
             <version>1.1.16</version>
         </dependency>
 
+        <!--spring data-->
         <dependency>
-            <groupId>org.activiti</groupId>
-            <artifactId>activiti-spring-boot-starter</artifactId>
-            <version>7.1.0.M1</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-
-
-
 
 
     </dependencies>
