--- a/eureke-druid/src/main/resources/application.yml
+++ b/eureke-druid/src/main/resources/application.yml
@@ -1,33 +1,31 @@
 server:
   port: 7777
 spring:
-  #Activiti property configuration
-  activiti:
-    database-schema-update: true
-    job-executor-activate: true # asyncExecutorEnabled属性设置设置true后将代替那些老的Job executor
-    history-level: full
-    db-history-used: true
-    check-process-definitions: false # 自动部署验证设置:true-开启（默认）、false-关闭
-
   datasource:
-    url: jdbc:mysql://localhost:3306/superdb?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC&nullCatalogMeansCurrent=true
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/superdb?useSSL=false&serverTimezone=UTC
     username: root
     password: 1234567
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    #使用druid数据库连接池
     type: com.alibaba.druid.pool.DruidDataSource
-    initialization-mode: always
-    initialSize: 5
-    minIdle: 5
-    maxActive: 200
+    #最大活跃数
+    maxActive: 20
+    #初始化数量
+    initialSize: 6
+    #最小连接数
+    minidle: 4
+    #最大连接等待超时时间
     maxWait: 60000
+    #打开PSCache，并且指定每个连接PSCache的大小
+    poolPreparedStatements: true
+    maxPoolPreparedStatementPerConnectionSize: 20
+    #通过connectionProperties属性来打开mergeSql功能；慢SQL记录
+    #connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+    minIdle: 1
     timeBetweenEvictionRunsMillis: 60000
     minEvictableIdleTimeMillis: 300000
-    validationQuery: SELECT 1 FROM DUAL
+    validationQuery: select 1 from dual
     testWhileIdle: true
     testOnBorrow: false
     testOnReturn: false
-    poolPreparedStatements: true
-    #    filters: stat,wall,log4j
-    maxPoolPreparedStatementPerConnectionSize: 20
-    useGlobalDataSourceStat: true
-    connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
+    #配置监控统计拦截的filters，去掉后监控界面sql将无法统计,'wall'用于防火墙
